# sid-isnt-done

./: .gitignore  Cargo.toml  RALPH.md  README.md  seatbelt.sh
init/: agents.conf  ralph.sid  tools.conf
init/agents/: build.md  compact.md  fix.md  judge.md  skill-inject  task.md
init/tools/: bash  edit  escalate  escalate.json  git-diff  git-diff.json  git-status  git-status.json  glob  glob.json  read  read.json  search  search.json  verdict  verdict.json
src/: builtin_tools.rs  config.rs  containers.rs  filesystem.rs  lib.rs  raw_listen.rs  raw_mode.rs  raw_protocol.rs  render.rs  retry.rs  seatbelt.rs  session.rs  sidiff.rs  sidreview.rs  skill_inject.rs  test_support.rs  tool_protocol.rs  tool_runtime.rs  user_instructions.rs
src/ralph/: args.rs  checkpoint.rs  host.rs  journal.rs  mod.rs  runner.rs  verdict.rs
tests/: ralph_loop.rs
