[package]
name = "sid-isnt-done"
version = "0.1.0"
edition = "2024"
description = "sid is a UNIX-inspired coding agent for Anthropic-compatible APIs"
license = "Apache-2.0"
repository = "https://github.com/rescrv/sid-isnt-done"
keywords = ["ai", "agent", "coding-assistant", "claude", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
arrrg = "^0.8"
async-trait = "0.1"
claudius = { version = "0.20.0" }
ctrlc = { version = "3.5", features = ["termination"] }
handled = { version = "0.6.0" }
libc = "0.2"
rc_conf = { version = "0.13.0", default-features = false }
rustyline = "17.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shvar = "^0.8"
tokio = { version = "1.49", features = ["full"] }
utf8path = "^0.9"
crossterm = { version = "0.27", features = ["event-stream"] }
futures = "0.3"
arrrg_derive = "0.8.0"
getopts = "0.2.24"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-bash = "0.25"

[[bin]]
name = "sid"
path = "src/bin/sid.rs"

[[bin]]
name = "sid-editor-tool"
path = "src/bin/sid-editor-tool.rs"

[[bin]]
name = "sid-seatbelt"
path = "src/bin/sid-seatbelt.rs"

[[bin]]
name = "sidiff"
path = "src/bin/sidiff.rs"
