[package]
name = "sid-isnt-done"
version = "0.2.1"
edition = "2024"
description = "sid is a UNIX-inspired coding agent for Anthropic-compatible APIs"
license = "Apache-2.0"
repository = "https://github.com/rescrv/sid-isnt-done"
keywords = ["ai", "agent", "coding-assistant", "claude", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
async-trait = "0.1"
base64 = "0.22"
libc = "0.2"
ctrlc = { version = "3.5", features = ["termination"] }
getopts = "0.2.24"
rustyline = "17.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "local-offset"] }
tokio = { version = "1.49", features = ["full"] }
tree-sitter = "0.25"
tree-sitter-bash = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"

arrrg = "^0.9"
arrrg_derive = "^0.9"
claudius = { version = "^0.27" }
handled = { version = "^0.7" }
rc_conf = { version = "^0.14", default-features = false }
shvar = "^0.9"
utf8path = "^0.10"

[[bin]]
name = "sid"
path = "src/bin/sid.rs"

[[bin]]
name = "sid-editor-tool"
path = "src/bin/sid-editor-tool.rs"

[[bin]]
name = "sid-path-join"
path = "src/bin/sid-path-join.rs"

[[bin]]
name = "sid-seatbelt"
path = "src/bin/sid-seatbelt.rs"

[[bin]]
name = "sid-skill-inject"
path = "src/bin/sid-skill-inject.rs"

[[bin]]
name = "sidiff"
path = "src/bin/sidiff.rs"

[profile.release]
debug = true
lto = true
opt-level = 2
panic = "abort"
